--- a/app/src/main/res/layout/event_card.xml
+++ b/app/src/main/res/layout/event_card.xml
@@ -25,7 +25,7 @@
                 android:layout_height="@dimen/posts_avatar_size"
                 android:layout_marginTop="@dimen/element_spacing"
                 android:layout_marginBottom="@dimen/common_spacing"
-                android:contentDescription="TODO"
+                android:contentDescription="@string/desc_avatar_image"
                 android:src="@drawable/img_test_avatar"
                 app:layout_constraintBottom_toBottomOf="@id/barrier_top"
                 app:layout_constraintStart_toStartOf="parent"
@@ -66,7 +66,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/element_spacing"
-                android:contentDescription="TODO"
+                android:contentDescription="@string/desc_icon_menu_button"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_menu_vert_24dp" />
@@ -85,10 +85,10 @@
                 android:layout_marginTop="@dimen/common_spacing"
                 android:autoLink="web"
                 android:padding="@dimen/element_spacing"
-                app:layout_constraintBottom_toTopOf="@id/link_post"
+                app:layout_constraintBottom_toTopOf="@id/LinkPostTV"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/date_event"
+                app:layout_constraintTop_toBottomOf="@id/DateEventTV"
                 tools:text="Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore" />
 
             <androidx.constraintlayout.widget.Group
@@ -105,10 +105,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
-                android:contentDescription="TODO"
+                android:contentDescription="@string/desc_attachment_image"
                 android:padding="@dimen/element_spacing"
                 android:visibility="gone"
-                app:layout_constraintBottom_toTopOf="@id/format_event"
+                app:layout_constraintBottom_toTopOf="@id/FormatEventTV"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -119,7 +119,7 @@
                 tools:src="@drawable/ic_people_outline_24dp" />
 
             <TextView
-                android:id="@+id/format_event"
+                android:id="@+id/FormatEventTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/element_spacing"
@@ -130,12 +130,12 @@
                 tools:text="Online" />
 
             <TextView
-                android:id="@+id/date_event"
+                android:id="@+id/DateEventTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/element_spacing"
                 android:layout_marginEnd="@dimen/element_spacing"
-                app:layout_constraintTop_toBottomOf="@id/format_event"
+                app:layout_constraintTop_toBottomOf="@id/FormatEventTV"
                 tools:text="12.02.2021 10:45" />
 
             <ImageButton
@@ -143,7 +143,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
-                android:contentDescription="TODO"
+                android:contentDescription="@string/desc_image_play_button"
                 android:src="@drawable/ic_play_80dp"
                 app:layout_constraintBottom_toBottomOf="@id/AttachmentIV"
                 app:layout_constraintEnd_toEndOf="@id/AttachmentIV"
@@ -151,7 +151,7 @@
                 app:layout_constraintTop_toTopOf="@id/AttachmentIV" />
 
             <TextView
-                android:id="@+id/link_post"
+                android:id="@+id/LinkPostTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/element_spacing"
@@ -165,7 +165,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:barrierDirection="bottom"
-                app:constraint_referenced_ids="TextPostTV,AttachmentIV,link_post" />
+                app:constraint_referenced_ids="TextPostTV,AttachmentIV,LinkPostTV" />
 
             <ImageButton
                 android:id="@+id/RepostIB"
@@ -174,7 +174,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/common_spacing"
                 android:background="@android:color/transparent"
-                android:contentDescription="TODO"
+                android:contentDescription="@string/desc_icon_repost"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@id/LikeIB"
                 app:layout_constraintTop_toBottomOf="@id/barrier_middle"
@@ -188,18 +188,20 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/common_spacing"
                 android:checkable="true"
-                android:contentDescription="TODO"
+                android:contentDescription="@string/desc_icon_like"
                 android:src="@drawable/sel_likes_24dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/barrier_middle" />
 
             <ImageButton
+                android:id="@+id/UsersIB"
                 style="?attr/materialIconButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/common_spacing"
                 android:src="@drawable/ic_people_outline_24dp"
+                android:contentDescription="@string/desc_icon_people"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/barrier_middle" />
