--- a/app/src/main/res/layout/job_card.xml
+++ b/app/src/main/res/layout/job_card.xml
@@ -20,7 +20,7 @@
             android:padding="@dimen/common_spacing">
 
             <TextView
-                android:id="@+id/name_job"
+                android:id="@+id/NameJobTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/size_text_title"
@@ -28,14 +28,14 @@
                 tools:text="LeroyMerlin" />
 
             <TextView
-                android:id="@+id/period_job"
+                android:id="@+id/PeriodJobTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/element_spacing"
                 tools:text="1 september 2020 - PT" />
 
             <TextView
-                android:id="@+id/position_job"
+                android:id="@+id/PositionJobTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/job_spacing"
@@ -43,7 +43,7 @@
                 tools:text="Product Turnover Manager" />
 
             <TextView
-                android:id="@+id/link_job"
+                android:id="@+id/LinkJobTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/job_spacing"
