--- a/app/src/main/res/layout/post_new_fragment.xml
+++ b/app/src/main/res/layout/post_new_fragment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,25 +7,30 @@
     tools:context=".ui.PostNewFragment">
 
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/PostDetailsTB"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/PostDetailsTB"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="top"
             android:minHeight="?attr/actionBarSize"
             app:menu="@menu/menu_new_post_top_bar"
             app:navigationIcon="@drawable/ic_arrow_back_24dp"
             app:title="@string/title_new_post" />
+
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+    <ScrollView
+        android:id="@+id/scrollView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/PostDetailsTB"
+        app:layout_constraintBottom_toTopOf="@+id/bottomAppBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        >
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -34,21 +39,50 @@
             <EditText
                 android:id="@+id/ContentPostET"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="start|top"
+                android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
                 android:inputType="textMultiLine"
                 android:padding="@dimen/common_spacing"
+                app:layout_constraintTop_toTopOf="parent"
                 tools:text="@tools:sample/lorem[100]" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.core.widget.NestedScrollView>
+            <ImageView
+                android:id="@+id/AttachmentIV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/ContentPostET"
+                app:layout_constraintVertical_bias="0.0"
+                tools:layout_editor_absoluteX="0dp"
+                tools:layout_height="200dp"
+                tools:src="@drawable/img_test_avatar" />
 
-    <com.google.android.material.bottomappbar.BottomAppBar
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/text_button_remove"
+                app:layout_constraintBottom_toBottomOf="@id/AttachmentIV"
+                app:layout_constraintEnd_toEndOf="@id/AttachmentIV"
+                app:layout_constraintStart_toStartOf="@id/AttachmentIV" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
+
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/bottomAppBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        app:menu="@menu/menu_new_post_bottom_bar"
-        />
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+        android:layout_marginTop="100dp"
+        >
+
+        <com.google.android.material.bottomappbar.BottomAppBar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:menu="@menu/menu_new_post_bottom_bar" />
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
