--- a/app/src/main/res/layout/post_new_fragment.xml
+++ b/app/src/main/res/layout/post_new_fragment.xml
@@ -10,6 +10,8 @@
         android:id="@+id/PostDetailsTB"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.appbar.MaterialToolbar
@@ -26,8 +28,9 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/bottomAppBar"
+        app:layout_constraintBottom_toTopOf="@+id/GroupNewPostBB"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/PostDetailsTB">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -56,8 +59,10 @@
                 tools:src="@drawable/img_test_avatar" />
 
             <Button
+                android:id="@+id/RemoveAttachmentB"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:contentDescription="@string/desc_button_remove"
                 android:text="@string/text_button_remove"
                 app:layout_constraintBottom_toBottomOf="@id/AttachmentIV"
                 app:layout_constraintEnd_toEndOf="@id/AttachmentIV"
@@ -69,13 +74,16 @@
     </androidx.core.widget.NestedScrollView>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:id="@+id/bottomAppBar"
+        android:id="@+id/GroupNewPostBB"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <com.google.android.material.bottomappbar.BottomAppBar
+            android:id="@+id/NewPostBB"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:menu="@menu/menu_new_post_bottom_bar" />
