--- a/app/src/main/res/menu/menu_app_bottom_naviagtion.xml
+++ b/app/src/main/res/menu/menu_app_bottom_naviagtion.xml
@@ -7,7 +7,7 @@
     <item
         android:id="@+id/Events"
         android:enabled="true"
-        android:icon="@drawable/ic_event_24dp"
+        android:icon="@drawable/ic_calendar_24dp"
         android:title="@string/events_item_menu" />
     <item
         android:id="@+id/Users"
